# ETL-Ocaml

./: README.md  RELATORIO.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
etl/: dune-project  etl.opam
etl/data/processed/: out.csv  out.db  out_monthly.csv
etl/lib/: dune  io.ml  io.mli  parse.ml  parse.mli  process.ml  process.mli  types.ml  types.mli
etl/test/: dune  test_domain.ml
