(lang dune 3.18)

(name etl)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name etl)
 (synopsis "A simple ETL pipeline in OCaml")
 (depends
  ocaml 
  ))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
